Tests/Negative/MultipleTraitImpl.mr
struct MyStruct {}
trait MyTrait {}

impl MyTrait for MyStruct { }
impl MyTrait for MyStruct { } // Error: Multiple implementations
